test/scc_test/decl/semantic-errors/000.a
000.t:2:1: error: redefinition of 'foo' with different storage class